--- a/config/content.htm
+++ b/config/content.htm
@@ -2,8 +2,8 @@
 <p>本學期的電腦輔助設計實習, 要求每一位學員根據本 HW template 的格式建立個人的作業倉儲與網頁.</p>
 <hr/>
 <p>學號40923226</p>
-<p>網站倉儲: <a href="https://github.com/mdecourse/cad2021_hw">https://github.com/mdecourse/cad2021_hw</a></p>
-<p>網站連結: <a href="https://mde.tw/cad2021_hw">https://mde.tw/cad2021_hw</a></p>
+<p>網站倉儲: <a href="https://github.com/40923226/cad2021_hw">https://github.com/40923226/cad2021_hw</a></p>
+<p>網站連結: <a href="https://40923226.github.io/cad2021_hw/">https://40923226.github.io/cad2021_hw/</a></p>
 <p>其他與作者或作業相關資料說明或介紹</p>
 <h1>Task</h1>
 <h2>hwpages</h2>
@@ -11,6 +11,7 @@
 <style type="text/css"><!--
 td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}
 --></style>
+</google-sheets-html-origin></p>
 <table border="1" cellpadding="0" cellspacing="0" dir="ltr" xmlns="http://www.w3.org/1999/xhtml"><colgroup><col width="60"/></colgroup>
 <tbody>
 <tr>
@@ -216,7 +217,8 @@ td {border: 1px solid #ccc;}br {mso-data-placement:same-cell;}
 </tr>
 </tbody>
 </table>
-</google-sheets-html-origin></p>
+<h2>githubpage</h2>
+<p><a href="https://40723126.github.io/cad2021_hw">40723126</a> <a href="https://40723135.github.io/cad2021_hw">40723135</a> <a href="https://40723217.github.io/cad2021_hw">40723217</a> <a href="https://40732331.github.io/cad2021_hw">40732331</a> <a href="https://40823114.github.io/cad2021_hw">40823114</a> <a href="https://40823115.github.io/cad2021_hw">40823115</a> <a href="https://pyc40823117.github.io/cad2021_hw">40823117</a> <a href="https://40823119.github.io/cad2021_hw">40823119</a> <a href="https://40823122.github.io/cad2021_hw">40823122</a> <a href="https://40823127.github.io/cad2021_hw">40823127</a> <a href="https://40823146.github.io/cad2021_hw">40823146</a> <a href="https://40823148.github.io/cad2021_hw">40823148</a> <a href="https://40823215.github.io/cad2021_hw">40823215</a> <a href="https://40871106.github.io/cad2021_hw">40871106</a> <a href="https://40923201.github.io/cad2021_hw">40923201</a> <a href="https://youshin40923203.github.io/cad2021_hw">40923203</a> <a href="https://40923204.github.io/cad2021_hw">40923204</a> <a href="https://40923205.github.io/cad2021_hw">40923205</a> <a href="https://40923206-1.github.io/cad2021_hw">40923206</a> <a href="https://40923207.github.io/cad2021_hw">40923207</a> <a href="https://nfu40923208.github.io/cad2021_hw">40923208</a> <a href="https://nfu40923209.github.io/cad2021_hw">40923209</a> <a href="https://40923210.github.io/cad2021_hw">40923210</a> <a href="https://a40923211.github.io/cad2021_hw">40923211</a> <a href="https://40923212.github.io/cad2021_hw">40923212</a> <a href="https://40923213.github.io/cad2021_hw">40923213</a> <a href="https://40923214.github.io/cad2021_hw">40923214</a> <a href="https://40923216.github.io/cad2021_hw">40923216</a> <a href="https://40923217.github.io/cad2021_hw">40923217</a> <a href="https://40923218.github.io/cad2021_hw">40923218</a> <a href="https://nfu40923219.github.io/cad2021_hw">40923219</a> <a href="https://40923220.github.io/cad2021_hw">40923220</a> <a href="https://40923221.github.io/cad2021_hw">40923221</a> <a href="https://40923223.github.io/cad2021_hw">40923223</a> <a href="https://s40923224.github.io/cad2021_hw">40923224</a> <a href="https://40923225.github.io/cad2021_hw">40923225</a> <a href="https://40923226.github.io/cad2021_hw">40923226</a> <a href="https://40923227.github.io/cad2021_hw">40923227</a> <a href="https://40923228.github.io/cad2021_hw">40923228</a> <a href="https://40923229.github.io/cad2021_hw">40923229</a> <a href="https://40923230.github.io/cad2021_hw">40923230</a> <a href="https://40923231.github.io/cad2021_hw">40923231</a> <a href="https://40923232.github.io/cad2021_hw">40923232</a> <a href="https://40923233.github.io/cad2021_hw">40923233</a> <a href="https://40923234.github.io/cad2021_hw">40923234</a> <a href="https://40923235.github.io/cad2021_hw">40923235</a> <a href="https://40923236.github.io/cad2021_hw">40923236</a> <a href="https://40923237.github.io/cad2021_hw">40923237</a> <a href="https://40923238.github.io/cad2021_hw">40923238</a> <a href="https://40923239.github.io/cad2021_hw">40923239</a> <a href="https://40923240.github.io/cad2021_hw">40923240</a> <a href="https://40923241.github.io/cad2021_hw">40923241</a> <a href="https://40923242.github.io/cad2021_hw">40923242</a> <a href="https://40923243.github.io/cad2021_hw">40923243</a> <a href="https://40923244.github.io/cad2021_hw">40923244</a> <a href="https://40923245-1.github.io/cad2021_hw">40923245</a> <a href="https://40923246.github.io/cad2021_hw">40923246</a> <a href="https://40923247.github.io/cad2021_hw">40923247</a> <a href="https://40923248.github.io/cad2021_hw">40923248</a> <a href="https://40923249-1.github.io/cad2021_hw">40923249</a> <a href="https://40923250.github.io/cad2021_hw">40923250</a> <a href="https://40923251.github.io/cad2021_hw">40923251</a> <a href="https://40923252.github.io/cad2021_hw">40923252</a> <a href="https://40923253.github.io/cad2021_hw">40923253</a> <a href="https://40971220.github.io/cad2021_hw">40971220</a> <a href="https://40971227.github.io/cad2021_hw">40971227</a></p>
 <h1>HW1</h1>
 <p>HW1 佔學期成績 25%</p>
 <p><span style="background-color: #ffff99;">HW1 必須在 2021.11.10 22:00 之前完成.<br/></span></p>
