--- a/content/Solvespace 繪圖.html
+++ b/content/Solvespace 繪圖.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='Solvespace 繪圖.html'>Solvespace 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,11 +139,22 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">CAD1 操作流程 << <a href='CAD1 操作流程.html'>Previous</a> <a href='CAD2 安裝配置.html'>Next</a> >> CAD2 安裝配置<br /><h1>CAD2 繪圖</h1>
-<p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD2 緣起說明與介紹</p>
-<p>請不要直接從找到的 CAD2 套件說明複製貼上, 而是應該要看完各種參考資料後, 重新打字彙整.</p>
-<br />CAD1 操作流程 << <a href='CAD1 操作流程.html'>Previous</a> <a href='CAD2 安裝配置.html'>Next</a> >> CAD2 安裝配置</div>
+    <div id="tipue_search_content">CAD1 操作流程 << <a href='CAD1 操作流程.html'>Previous</a> <a href='CAD2 安裝配置.html'>Next</a> >> CAD2 安裝配置<br /><h1>Solvespace 繪圖</h1>
+<p><span>Solvespace是一套免費且開源的CAD軟體，作者是</span><span>Jonathan Westhues與其他自願者</span><span>，於2008年開發，作業環境跨足Windows、Linux和MacOS。</span></p>
+<p><strong></strong></p>
+<p><span>Solvespace</span> 緣起說明與介紹</p>
+<p>1. Parts (零件繪製)</p>
+<p><span>An introductory(引導性) tutorial(教程) is available(有用的), in which we draw the 'same part'(同一部分) that is shown in the 'demo video'(演示視頻).</span><span>This covers most of the 'basic features'(基本功能) of SolveSpace, including sketches(草圖), constraints(約束), extrusions(擠出), and 'Boolean operations'(布爾運算).</span></p>
+<p>我們提供了一個引導性教程，其中我們繪製演示視頻中表示的相同部分。</p>
+<p>這涵蓋了 SolveSpace 的大部分基本功能，包括草圖、約束、擠出和布爾運算。</p>
+<p><span>應用包括：</span></p>
+<ul>
+<li><span><span>建模 <span style="color: #ff0000;">3D</span> 零件 – 使用<span style="color: #ff0000;">拉伸、旋轉</span>和</span></span><span style="color: #ff0000;"><a class="mw-redirect" href="https://en.wikipedia.org/wiki/Boolean_operations_in_computer-aided_design" style="color: #ff0000;" title="計算機輔助設計中的布爾運算">布爾</a></span><span><span>（並/差）操作進行</span><span>繪製</span></span></li>
+<li><span><span>建模 <span style="color: #ff0000;">2D</span> 零件 – 將零件繪製為單個部分，並導出為</span></span><span style="color: #ff0000;"><a class="mw-redirect" href="https://en.wikipedia.org/wiki/DXF" style="color: #ff0000;" title="DXF">DXF</a>、<a href="https://en.wikipedia.org/wiki/PDF" style="color: #ff0000;" title="PDF">PDF</a></span><span><span>或</span></span><span style="color: #ff0000;"><a href="https://en.wikipedia.org/wiki/Scalable_Vector_Graphics" style="color: #ff0000;" title="可縮放矢量圖形">SVG</a></span><span><span>；</span><span>使用 3D 裝配驗證配合</span></span></li>
+<li><span><span>準備</span></span><span style="color: #ff0000;"><a href="https://en.wikipedia.org/wiki/Computer-aided_manufacturing" style="color: #ff0000;" title="計算機輔助製造">CAM</a></span><span><span>數據 – 為水刀機或激光切割機導出 2D 矢量藝術；</span><span>或生成<span style="color: #ff0000;"> STEP</span> 或</span></span><span style="color: #ff0000;"><a href="https://en.wikipedia.org/wiki/STL_(file_format)" style="color: #ff0000;" title="STL（文件格式）">STL</a></span><span><span>，用於導入第三方 CAM 軟件</span></span></li>
+<li><span><span>機構設計 - 使用約束求解器模擬平面或空間鏈接，包括銷、球或滑動關節</span></span></li>
+<li><span><span>平面和實體幾何 - 用實時尺寸繪圖替換手工求解的三角函數和電子表格</span></span></li>
+</ul><br />CAD1 操作流程 << <a href='CAD1 操作流程.html'>Previous</a> <a href='CAD2 安裝配置.html'>Next</a> >> CAD2 安裝配置</div>
         
     <!-- footer -->
       <div class="container">
