--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -301,10 +301,32 @@ end</pre>
 <p><img alt="" class="add_border" height="282" src="/images/meArm_linkage_dimension.png" width="600"/></p>
 <p>(From: <a href="/downloads/2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf">2016_ADDITIVE MANUFACTURING PROCESSES FOR FABRICATING A MINI ROBOT - COMPUTATIONAL MODELS AND EXPERIMENTAL RESULTS.pdf</a>)</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/2pFReCfDZsU" title="YouTube video player" width="560"></iframe></p>
-<h2>CAD1 繪圖</h2>
-<p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD1 緣起說明與介紹</p>
-<p>請不要直接從找到的 CAD1 套件說明複製貼上, 而是應該要看完各種參考資料後, 重新打字彙整.</p>
+<h2>INVENTOR 繪圖</h2>
+<p><strong>VPN申請及使用</strong></p>
+<p>請先去<span><a href="https://ecare.nfu.edu.tw/">e-care</a></span>登入自己帳號後從<span>個人資訊及設定→SSL-VPN</span>去申請VPN申請通過後要去下載 <span>Pulse Secure </span>及登入，詳情可至<span><a href="https://nfucc.nfu.edu.tw/?p=17008">虎科大SSL-VPN服務教學</a></span>查看。</p>
+<p><strong>Inventor安裝</strong></p>
+<p>開啟VPN後去虎科大的<span>電子計算機中心→下載專區→資訊服務組→<span><a href="https://software.nfu.edu.tw/">校園授權軟體下載專區(限校內IP)</a></span>→AUTODESK</span>下載<span>(Windows下載PDSU)</span>，<span><a href="https://software.nfu.edu.tw/files/AUTODESK%E5%AE%89%E8%A3%9D%E6%95%99%E5%AD%B8.pdf">安裝教學</a>(請開VPN後再點擊此連結)</span>。</p>
+<p>CAD1 Inventor緣起說明與介紹</p>
+<p><span>是美國AutoDesk公司推出的一款三維可視化實體模擬軟件Autodesk Inventor Professional（AIP），目前已推出最新版本AIP2019。同時還推出了iphone版本，在</span><a data-lemmaid="9970575" href="https://baike.baidu.com/item/app%20store/9970575" target="_blank"><span>app store</span></a><span>有售。Autodesk Inventor Professional包括Autodesk Inventor三維設計軟件；基於AutoCAD平台開發的二維機械製圖和詳圖軟件AutoCAD Mechanical；還加入了用於纜線和束線設計、管道設計及PCB IDF文件輸入的專業功能模塊，並加入了由業界領先的ANSYS技術支持的FEA功能，可以直接在Autodesk Inventor軟件中進行應力分析。在此基礎上，集成的數據管理軟件Autodesk Vault-用於安全地管理進展中的設計數據。</span></p>
+<p><em><strong>1 應用方面<br/></strong></em></p>
+<p>提供了一個<span>無風險</span>的<span>二維</span>到<span>三維</span>轉換路徑，能以自己的進度轉換到三維，保護的二維圖形和知識投資，並且清楚地知道自己在使用目前市場上<span>DWG</span>兼容性最強的平台。Autodesk Inventor Professional軟件是一套全面的設計工具，用於創建和驗證完整的數字樣機；幫助製造商減少物理樣機投入，以更快的速度將更多的創新產品推向市場。為<span>適用於設計流程的理想工具</span>及<span>滿足設計需求的專用工具</span></p>
+<p><span><em><strong>2 增強功能仿真</strong></em></span></p>
+<div class="para" label-module="para"><span>可以據實際工況添加載荷、摩擦特性和運動約束，然後通過運行仿真功能驗證設計。借助與應力分析模塊的無縫集成，可將工況傳遞到某一個零件上，來優化零部件設計。</span></div>
+<div class="para" label-module="para">（增強功能）<span>有輸出到應力分析中、 約束轉換、 載荷定義、可視化、點軌跡、圖示器、模型簡化、薄壁件處理、將分析數據導入ANSYS。</span></div>
+<div class="para" label-module="para"><span><em><strong>3 零件設計</strong></em></span></div>
+<div class="para" label-module="para">
+<div class="para" label-module="para"><span>Inventor 可以幫助設計人員更為輕鬆地重複利用已有的設計數據，生動地表現設計意圖。借助其中全面關聯的模型，零件設計中的任何變化都可以反映到裝配模型和工程圖文件中。由此，設計人員的工作效率將得到顯著提高。</span></div>
+<div class="para" label-module="para"><span><span>Inventor 可以使經常使用的自定義特徵和零件的設計標準化和系列化，從而提高生產效率。</span><span>利用Inventor 中的iPart技術，設計公司可以輕鬆設置智能零件庫，以確保始終以同種方式創建常用零件。</span></span></div>
+<div class="para" label-module="para"><span><span><em><strong>4 裝配設計</strong></em></span></span></div>
+<div class="para" label-module="para">
+<div class="para" label-module="para"><span>將設計加速器與易於使用的裝配工具相結合，使用戶可以確保裝配設計中每一個零部件的安裝正確。</span></div>
+<div class="para" label-module="para"><span><span>精確地驗證干涉情況和各種屬性，以便一次性創建高質量的產品。</span><span>Inventor提供的強大工具可有效控制和管理大型裝配設計中創建的數據，因此用戶只需專心工作在所關心的部分零部件上。</span></span></div>
+<p><em><strong>5 工程圖<br/></strong></em></p>
+<p><em><span>包含從數字樣機中生成工程設計和製造文檔的全套工具。這些工具可減少設計錯誤，縮短設計交付時間</span><span>此外，Inventor還支持所有主流的繪圖標準，與</span><span><a href="https://baike.baidu.com/item/%E4%B8%89%E7%BB%B4%E6%A8%A1%E5%9E%8B" target="_blank">三維模型</a></span><span><span>的完全關聯（在出現設計變更時，工程圖將同步更新），以及<span>DWG</span>輸出格式，因此是創建和共享DWG工程圖的理想選擇。</span></span></em></p>
+<p><em><span><span><strong>6 運動仿真</strong></span></span></em></p>
+<p><em><span><span><strong>可以據實際工況添加載荷、摩擦特性和運動約束，然後通過運行仿真功能驗證設計。<span>借助與應力分析模塊的無縫集成，可將工況傳遞到某一個零件上，來優化零部件設計。</span></strong></span></span></em></p>
+</div>
+</div>
 <h3>CAD1 安裝配置</h3>
 <p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD1 套件下載安裝與配置</p>
@@ -329,11 +351,22 @@ end</pre>
 <p>CAD1 零組件繪圖教學影片 (Wink)</p>
 <p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
 <p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
-<h2>CAD2 繪圖</h2>
-<p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD2 緣起說明與介紹</p>
-<p>請不要直接從找到的 CAD2 套件說明複製貼上, 而是應該要看完各種參考資料後, 重新打字彙整.</p>
-<h3>CAD2 安裝配置</h3>
+<h2>Solvespace 繪圖</h2>
+<p><span>Solvespace是一套免費且開源的CAD軟體，作者是</span><span>Jonathan Westhues與其他自願者</span><span>，於2008年開發，作業環境跨足Windows、Linux和MacOS。</span></p>
+<p><strong></strong></p>
+<p><span>Solvespace</span> 緣起說明與介紹</p>
+<p>1. Parts (零件繪製)</p>
+<p><span>An introductory(引導性) tutorial(教程) is available(有用的), in which we draw the 'same part'(同一部分) that is shown in the 'demo video'(演示視頻).</span><span>This covers most of the 'basic features'(基本功能) of SolveSpace, including sketches(草圖), constraints(約束), extrusions(擠出), and 'Boolean operations'(布爾運算).</span></p>
+<p>我們提供了一個引導性教程，其中我們繪製演示視頻中表示的相同部分。</p>
+<p>這涵蓋了 SolveSpace 的大部分基本功能，包括草圖、約束、擠出和布爾運算。</p>
+<p><span>應用包括：</span></p>
+<ul>
+<li><span><span>建模 3D 零件 – 使用拉伸、旋轉和</span></span><a class="mw-redirect" href="https://en.wikipedia.org/wiki/Boolean_operations_in_computer-aided_design" title="計算機輔助設計中的布爾運算"><span><span>布爾</span></span></a><span><span>（並/差）操作進行</span><span>繪製</span></span></li>
+<li><span><span>建模 2D 零件 – 將零件繪製為單個部分，並導出為</span></span><a class="mw-redirect" href="https://en.wikipedia.org/wiki/DXF" title="DXF"><span><span>DXF</span></span></a><span><span>、</span></span><a href="https://en.wikipedia.org/wiki/PDF" title="PDF"><span><span>PDF</span></span></a><span><span>或</span></span><a href="https://en.wikipedia.org/wiki/Scalable_Vector_Graphics" title="可縮放矢量圖形"><span><span>SVG</span></span></a><span><span>；</span><span>使用 3D 裝配驗證配合</span></span></li>
+<li><span><span>準備</span></span><a href="https://en.wikipedia.org/wiki/Computer-aided_manufacturing" title="計算機輔助製造"><span><span>CAM</span></span></a><span><span>數據 – 為水刀機或激光切割機導出 2D 矢量藝術；</span><span>或生成 STEP 或</span></span><a href="https://en.wikipedia.org/wiki/STL_(file_format)" title="STL（文件格式）"><span><span>STL</span></span></a><span><span>，用於導入第三方 CAM 軟件</span></span></li>
+<li><span><span>機構設計 - 使用約束求解器模擬平面或空間鏈接，包括銷、球或滑動關節</span></span></li>
+<li><span><span>平面和實體幾何 - 用實時尺寸繪圖替換手工求解的三角函數和電子表格</span></span></li>
+</ul><h3>CAD2 安裝配置</h3>
 <p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD2 套件下載安裝與配置</p>
 <p>CAD2 套件下載安裝與配置影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>套件下載安裝與配置影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
