--- a/content/歡迎來到我的網站!!.html
+++ b/content/歡迎來到我的網站!!.html
@@ -141,11 +141,13 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='Task.html'>Next</a> >> Task<br /><h1>歡迎來到我的網站!!</h1>
 <p>本學期的電腦輔助設計實習, 要求每一位學員根據本 HW template 的格式建立個人的作業倉儲與網頁.</p>
+<p>目前已經先學習到如何運用一些像是CMS他能更快捷的方式進入我的倉儲，不須在像以前還要打一長串，才能進到我的倉儲，還有ACP可以快速的上傳我的新進度，方便我繳交任何作業~~</p>
 <hr/>
 <p>學號40923226</p>
 <p>網站倉儲: <a href="https://github.com/40923226/cad2021_hw">https://github.com/40923226/cad2021_hw</a></p>
 <p>網站連結: <a href="https://40923226.github.io/cad2021_hw/">https://40923226.github.io/cad2021_hw/</a></p>
-<p>其他與作者或作業相關資料說明或介紹</p><br /> <a href='Task.html'>Next</a> >> Task</div>
+<p>其他與作者或作業相關資料說明或介紹</p>
+<br /> <a href='Task.html'>Next</a> >> Task</div>
         
     <!-- footer -->
       <div class="container">
