--- a/content/Solvespace 繪圖.html
+++ b/content/Solvespace 繪圖.html
@@ -154,7 +154,8 @@ img.add_border {
 <li><span><span>準備</span></span><span style="color: #ff0000;"><a href="https://en.wikipedia.org/wiki/Computer-aided_manufacturing" style="color: #ff0000;" title="計算機輔助製造">CAM</a></span><span><span>數據 – 為水刀機或激光切割機導出 2D 矢量藝術；</span><span>或生成<span style="color: #ff0000;"> STEP</span> 或</span></span><span style="color: #ff0000;"><a href="https://en.wikipedia.org/wiki/STL_(file_format)" style="color: #ff0000;" title="STL（文件格式）">STL</a></span><span><span>，用於導入第三方 CAM 軟件</span></span></li>
 <li><span><span>機構設計 - 使用約束求解器模擬平面或空間鏈接，包括銷、球或滑動關節</span></span></li>
 <li><span><span>平面和實體幾何 - 用實時尺寸繪圖替換手工求解的三角函數和電子表格</span></span></li>
-</ul><br />CAD1 操作流程 << <a href='CAD1 操作流程.html'>Previous</a> <a href='CAD2 安裝配置.html'>Next</a> >> CAD2 安裝配置</div>
+</ul>
+<br />CAD1 操作流程 << <a href='CAD1 操作流程.html'>Previous</a> <a href='CAD2 安裝配置.html'>Next</a> >> CAD2 安裝配置</div>
         
     <!-- footer -->
       <div class="container">
