Invent update video

--- a/content/INVENTOR 繪圖.html
+++ b/content/INVENTOR 繪圖.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='Solvespace 繪圖.html'>Solvespace 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
+                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='CAD1 安裝配置.html'>Next</a> >> CAD1 安裝配置<br /><h1>INVENTOR 繪圖</h1>
+    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='Inventor 安裝配置.html'>Next</a> >> Inventor 安裝配置<br /><h1>INVENTOR 繪圖</h1>
 <p><strong>VPN申請及使用</strong></p>
 <p>請先去<span><a href="https://ecare.nfu.edu.tw/">e-care</a></span>登入自己帳號後從<span>個人資訊及設定→SSL-VPN</span>去申請VPN申請通過後要去下載 <span>Pulse Secure </span>及登入，詳情可至<span><a href="https://nfucc.nfu.edu.tw/?p=17008">虎科大SSL-VPN服務教學</a></span>查看。</p>
 <p><strong>Inventor安裝</strong></p>
@@ -165,7 +165,7 @@ img.add_border {
 <p><em><span><span><strong>可以據實際工況添加載荷、摩擦特性和運動約束，然後通過運行仿真功能驗證設計。<span>借助與應力分析模塊的無縫集成，可將工況傳遞到某一個零件上，來優化零部件設計。</span></strong></span></span></em></p>
 </div>
 </div>
-<br />HW1 << <a href='HW1.html'>Previous</a> <a href='CAD1 安裝配置.html'>Next</a> >> CAD1 安裝配置</div>
+<br />HW1 << <a href='HW1.html'>Previous</a> <a href='Inventor 安裝配置.html'>Next</a> >> Inventor 安裝配置</div>
         
     <!-- footer -->
       <div class="container">
