--- a/content/Onshape 繪圖.html
+++ b/content/Onshape 繪圖.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='Solvespace 繪圖.html'>Solvespace 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
+                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,13 +139,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">CAD1 安裝配置 << <a href='CAD1 安裝配置.html'>Previous</a> <a href='Solvespace 繪圖.html'>Next</a> >> Solvespace 繪圖<br /><h1>CAD1 操作流程</h1>
-<p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
-<p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
-<p>CAD1 零組件繪圖教學影片 (Wink)</p>
-<p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
-<br />CAD1 安裝配置 << <a href='CAD1 安裝配置.html'>Previous</a> <a href='Solvespace 繪圖.html'>Next</a> >> Solvespace 繪圖</div>
+    <div id="tipue_search_content">Inventor 操作流程 << <a href='Inventor 操作流程.html'>Previous</a> <a href='CAD2 安裝配置.html'>Next</a> >> CAD2 安裝配置<br /><h1>Onshape 繪圖</h1>
+<p><span>Onshape 不僅支持跨設備分享設計，而且還可協作編輯，這一切都是在瀏覽器上實時進行的。其秘密在於採用了混合方案来計算產品的曲面和運動。除了利用用户設備的處理器能力以外，Onshape 還结合了會基礎設施的能力来對設計進行複雜的渲染，有了強大的计算能力支撑，用戶設備的能力就不是问题了。比方说用戶在本地修改了設計的斜角后，設備馬上會將修改同步到雲端，再由後台計算出新的幾何體，整個過程幾乎沒有延遲。</span></p>
+<p><strong></strong></p>
+<p><span>Onshape</span> 緣起說明與介紹</p>
+<p><span>一套由前Solidworks團隊開發出來的3D建模平台 – Onshape，讓我驚訝的不是它的界面跟Solidworks很像，或是它免費（這是一定要），而且該有功能它都有，更重要的是它可以把設計的權力下放給每個使用者，而不只是特定的設計工程師，這對於開發產品的人感受會最深。</span></p>
+<p>Onshape是用規劃圖來建立2D的概念，而不是單一斷面，這表示使用者可以在一張2D圖上看出各個面向的設計，這對機構工程師是基本能力，但對大部份沒有受過圖學訓練的maker或一般使用者，要他們把一空間的物件拆成單一的幾何元素，再組合成一個物體，才會達到需要的外型，很有難度，但這就是繪製3D需要做的事。</p>
+<p>3D建模大部份是由2D截面長成3D，這時2D的邊界就要很明確，因長出3D的範圍就是由線所建立的封閉面積，但Onshape改用類似塗色塊的方式，選出要長肉的區塊。</p>
+<p>這不是功能改進，而是設計概念的不同，但我也不能否認，這個概念可能是從大家常用的美工軟體概念來的。</p><br />Inventor 操作流程 << <a href='Inventor 操作流程.html'>Previous</a> <a href='CAD2 安裝配置.html'>Next</a> >> CAD2 安裝配置</div>
         
     <!-- footer -->
       <div class="container">
