更改inventor操作流程

--- a/config/content.htm
+++ b/config/content.htm
@@ -342,13 +342,13 @@ end</pre>
 <h4></h4>
 <h3>Inventor 操作流程</h3>
 <p><span>Inventor 操作過程:</span><a href="https://www.youtube.com/watch?v=EmnxMJK2DeY">https://www.youtube.com/watch?v=EmnxMJK2DeY</a></p>
-<p>CAD1 零組件繪圖教學影片 (待趕工)</p>
+<p>  零組件繪圖教學影片 (照以上影片操作):個零件都先以CAD先描繪過一次，再轉成DXF檔，再以inventor打開圖檔，並且長料，就完成了此零件。</p>
+<p>  如果遇到零件無法長料，就代表此圖並沒有封閉，可一個一個部分檢查，但會消耗較多時間，或者也可以直接在上面多描一次</p>
 <p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
 <p></p>
 <p>目前進度(50%):已經將所有老師分發下來的零件，經由autocad重新畫過一遍，並且將它以Inventor繪畫成3D的零件，目前只差把零件組裝起來，但是因為高中沒學過，所以還在詢問同學該如何製作</p>
 <p>目前進度(70%):已經將零件組裝過一次，現在只差重新來過，並且錄製成影片，就大功告成了</p>
-<p></p>
-<h2>Onshape 繪圖</h2>
+<p></p><h2>Onshape 繪圖</h2>
 <p><span>Onshape 不僅支持跨設備分享設計，而且還可協作編輯，這一切都是在瀏覽器上實時進行的。其秘密在於採用了混合方案来計算產品的曲面和運動。除了利用用户設備的處理器能力以外，Onshape 還结合了會基礎設施的能力来對設計進行複雜的渲染，有了強大的计算能力支撑，用戶設備的能力就不是问题了。比方说用戶在本地修改了設計的斜角后，設備馬上會將修改同步到雲端，再由後台計算出新的幾何體，整個過程幾乎沒有延遲。</span></p>
 <p><strong></strong></p>
 <p><span>Onshape</span> 緣起說明與介紹</p>
