--- a/config/content.htm
+++ b/config/content.htm
@@ -360,7 +360,9 @@ end</pre>
 <p>我被分配到第二個程式是onshape，這個程式並不用下載，可直接上網查詢onshape，點開第一個網頁，並且註冊帳號，便可以直接使用，裡面的工具並非其他程式繁雜，所以可以很快上手，而且可以直接匯入DXF檔(先用CAD畫出零件草圖在存成DXF檔這樣就可以了)，再來按下擠出，並且擠到所要的尺寸，便完成需要的零件檔。</p>
 <p>CAD2 套件下載安裝與配置</p>
 <p>CAD2 套件下載安裝與配置影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>套件下載安裝與配置影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p><h3>CAD2 操作流程</h3>
+<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
+<p></p>
+<p>Onshape 使用方法: <a href="https://www.youtube.com/watch?v=6tAS4hV2ETI">https://www.youtube.com/watch?v=6tAS4hV2ETI</a></p><h3>CAD2 操作流程</h3>
 <p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD2 零組件繪圖操作流程影片 (Youtube)</p>
 <p>CAD2 零組件繪圖教學影片 (Wink)</p>
