--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -357,7 +357,7 @@ end</pre>
 <p>3D建模大部份是由2D截面長成3D，這時2D的邊界就要很明確，因長出3D的範圍就是由線所建立的封閉面積，但Onshape改用類似塗色塊的方式，選出要長肉的區塊。</p>
 <p>這不是功能改進，而是設計概念的不同，但我也不能否認，這個概念可能是從大家常用的美工軟體概念來的。</p>
 <h3>onshape安裝配置</h3>
-<p>CAD2 指各學員所分配到的第二套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
+<p>我被分配到第二個程式是onshape，這個程式並不用下載，可直接上網查詢onshape，點開第一個網頁，並且註冊帳號，便可以直接使用，裡面的工具並非其他程式繁雜，所以可以很快上手，而且可以直接匯入DXF檔(先用CAD畫出零件草圖在存成DXF檔這樣就可以了)，再來按下擠出，並且擠到所要的尺寸，便完成需要的零件檔。</p>
 <p>CAD2 套件下載安裝與配置</p>
 <p>CAD2 套件下載安裝與配置影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>套件下載安裝與配置影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
 <p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p><h3>CAD2 操作流程</h3>
