--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -379,8 +379,13 @@ end</pre>
 <p style="padding-left: 30px;">CAD2 轉入 Coppeliasim 教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零件轉入 CoppeliaSim 教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
 <p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
 <h1>W11(H2)</h1>
+<p>零件尺寸圖(auto CAD):</p>
 <p></p>
-<h1>Wink(W13)</h1>
+<p>3D零件檔案(onshape):</p>
+<p><a href="https://drive.google.com/drive/folders/1HuML2w-Yojt4INraseoe8ytOGWgsyypd?usp=sharing">https://drive.google.com/drive/folders/1HuML2w-Yojt4INraseoe8ytOGWgsyypd?usp=sharing</a></p>
+<p>3D零件檔案(inventor):</p>
+<p>影片:</p>
+<p></p><h1>Wink(W13)</h1>
 <p>先用wink錄製影片，將兩套程式的零件組繪圖進度紀錄進去</p>
 <p>再來用老師所提供的原始碼，並更改一下內容，將影片改成自己想要的名稱，上傳到倉儲上</p>
 <p></p>
