onshape 四連桿件繪圖過程

--- a/config/content.htm
+++ b/config/content.htm
@@ -385,7 +385,7 @@ end</pre>
 <p><a href="https://drive.google.com/drive/folders/1UMRjqft1-kyaHtjBy0bJvjCNng9j8U2l?usp=sharing">https://drive.google.com/drive/folders/1UMRjqft1-kyaHtjBy0bJvjCNng9j8U2l?usp=sharing</a></p>
 <p>3D零件檔案(inventor):</p>
 <p>影片:</p>
-<p></p><h1>Wink(W13)</h1>
+<p>https://www.youtube.com/watch?v=WcgBfZCOkEQ<a href="https://www.youtube.com/watch?v=WcgBfZCOkEQ">https://www.youtube.com/watch?v=WcgBfZCOkEQ</a></p><h1>Wink(W13)</h1>
 <p>先用wink錄製影片，將兩套程式的零件組繪圖進度紀錄進去</p>
 <p>再來用老師所提供的原始碼，並更改一下內容，將影片改成自己想要的名稱，上傳到倉儲上</p>
 <p></p>
