--- a/content/W13-1.html
+++ b/content/W13-1.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,14 +139,31 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">運動場景 << <a href='運動場景.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)<br /><h1>W11(H2)</h1>
-<p>零件尺寸圖(auto CAD):</p>
-<p><a href="https://drive.google.com/drive/folders/1tTAwIHiRr_Y-cCoNJJCFGArpYdtIHxnq?usp=sharing">https://drive.google.com/drive/folders/1tTAwIHiRr_Y-cCoNJJCFGArpYdtIHxnq?usp=sharing</a></p>
-<p>3D零件檔案(onshape):</p>
-<p><a href="https://drive.google.com/drive/folders/1UMRjqft1-kyaHtjBy0bJvjCNng9j8U2l?usp=sharing">https://drive.google.com/drive/folders/1UMRjqft1-kyaHtjBy0bJvjCNng9j8U2l?usp=sharing</a></p>
-<p>3D零件檔案(inventor):</p>
-<p>影片:</p>
-<p>https://www.youtube.com/watch?v=WcgBfZCOkEQ<a href="https://www.youtube.com/watch?v=WcgBfZCOkEQ">https://www.youtube.com/watch?v=WcgBfZCOkEQ</a></p><br />運動場景 << <a href='運動場景.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)</div>
+    <div id="tipue_search_content">Wink(W13) << <a href='Wink(W13).html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1<br /><h1>W13-1</h1>
+<p dir="auto">請建立一個 Wink 檔案, 將 1. 已經完成的 meArm 機械手臂第一軸, 加入<span> </span><a href="https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm" rel="nofollow">https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm</a><span> </span>slider, 可以在執行時, 利用滑鼠拖動旋轉 360 度 (30%).</p>
+<div class="winkVideoPlayOverlayClass"></div>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="800" width="1200">
+<source src="./../downloads/40923226.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div><br />Wink(W13) << <a href='Wink(W13).html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1</div>
         
     <!-- footer -->
       <div class="container">
