--- a/content/W11(H2).html
+++ b/content/W11(H2).html
@@ -146,7 +146,9 @@ img.add_border {
 <p><a href="https://drive.google.com/drive/folders/1UMRjqft1-kyaHtjBy0bJvjCNng9j8U2l?usp=sharing">https://drive.google.com/drive/folders/1UMRjqft1-kyaHtjBy0bJvjCNng9j8U2l?usp=sharing</a></p>
 <p>3D零件檔案(inventor):</p>
 <p>影片:</p>
-<p>https://www.youtube.com/watch?v=WcgBfZCOkEQ<a href="https://www.youtube.com/watch?v=WcgBfZCOkEQ">https://www.youtube.com/watch?v=WcgBfZCOkEQ</a></p><br />運動場景 << <a href='運動場景.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)</div>
+<p><a href="https://www.youtube.com/watch?v=WcgBfZCOkEQ">https://www.youtube.com/watch?v=WcgBfZCOkEQ</a></p>
+<p><a href="https://youtu.be/_J8cbSAUAD8">https://youtu.be/_J8cbSAUAD8</a>(轉動影片)</p>
+<p>(因為要看清楚有插銷，所以影片裡故意讓它突出一塊)</p><br />運動場景 << <a href='運動場景.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)</div>
         
     <!-- footer -->
       <div class="container">
