--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -385,7 +385,9 @@ end</pre>
 <p><a href="https://drive.google.com/drive/folders/1UMRjqft1-kyaHtjBy0bJvjCNng9j8U2l?usp=sharing">https://drive.google.com/drive/folders/1UMRjqft1-kyaHtjBy0bJvjCNng9j8U2l?usp=sharing</a></p>
 <p>3D零件檔案(inventor):</p>
 <p>影片:</p>
-<p>https://www.youtube.com/watch?v=WcgBfZCOkEQ<a href="https://www.youtube.com/watch?v=WcgBfZCOkEQ">https://www.youtube.com/watch?v=WcgBfZCOkEQ</a></p><h1>Wink(W13)</h1>
+<p><a href="https://www.youtube.com/watch?v=WcgBfZCOkEQ">https://www.youtube.com/watch?v=WcgBfZCOkEQ</a></p>
+<p><a href="https://youtu.be/_J8cbSAUAD8">https://youtu.be/_J8cbSAUAD8</a></p>
+<p>(因為要看清楚有插銷，所以影片裡故意讓它突出一塊)</p><h1>Wink(W13)</h1>
 <p>先用wink錄製影片，將兩套程式的零件組繪圖進度紀錄進去</p>
 <p>再來用老師所提供的原始碼，並更改一下內容，將影片改成自己想要的名稱，上傳到倉儲上</p>
 <p></p>
@@ -407,7 +409,7 @@ frameStops: {
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressThumbClass">
 <h2>W13-1</h2>
-<p dir="auto"></p>
+<p dir="auto">請建立一個 Wink 檔案, 將 1. 已經完成的 meArm 機械手臂第一軸, 加入<span> </span><a href="https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm" rel="nofollow">https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm</a><span> </span>slider, 可以在執行時, 利用滑鼠拖動旋轉 360 度 (30%).</p>
 <div class="winkVideoPlayOverlayClass"></div>
 <script>
 var winkVideoData = {
