期末考上傳

--- a/config/content.htm
+++ b/config/content.htm
@@ -387,7 +387,27 @@ end</pre>
 <p>影片:</p>
 <p><a href="https://www.youtube.com/watch?v=WcgBfZCOkEQ">https://www.youtube.com/watch?v=WcgBfZCOkEQ</a></p>
 <p><a href="https://youtu.be/_J8cbSAUAD8">https://youtu.be/_J8cbSAUAD8</a>(轉動影片)</p>
-<p>(因為要看清楚有插銷，所以影片裡故意讓它突出一塊)</p><h1>Wink(W13)</h1>
+<p>(因為要看清楚有插銷，所以影片裡故意讓它突出一塊)</p>
+<p></p>
+<p></p>
+<h1>期末考</h1>
+<p>零件檔:<a href="https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing">https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing</a></p>
+<p></p>
+<p>繪圖過程:<a href="https://www.youtube.com/watch?v=gJJvBSnFo54">https://www.youtube.com/watch?v=gJJvBSnFo54</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/gJJvBSnFo54" width="800"></iframe></p>
+<p></p>
+<p>組裝影片:<a href="https://www.youtube.com/watch?v=tq-kHz-yLA8">https://www.youtube.com/watch?v=tq-kHz-yLA8</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/tq-kHz-yLA8" width="800"></iframe></p>
+<p></p>
+<p></p>
+<p></p>
+<p>wink:</p>
+<p></p>
+<p>心得:</p>
+<p>  這學期碰觸到了一些新的繪圖程式，而我接觸到的有onshape還有inventor，簡單的繪圖就像上面影片所做，接下來的coppeliasim才是真正的重點，要思考各軸與各軸的運動關係，然後要怎麼讓他做動，直線運動、旋轉運動等等，然後放置我的零件進入後，開始組裝。要先</p>
+<p>還有重點就是在coppeliasim裡都是英文，在平常幾乎看不到的單字讓我非常頭痛，不過這也讓我花時間去翻譯去學習。</p>
+<p>  </p>
+<p></p><h1>Wink(W13)</h1>
 <p>先用wink錄製影片，將兩套程式的零件組繪圖進度紀錄進去</p>
 <p>再來用老師所提供的原始碼，並更改一下內容，將影片改成自己想要的名稱，上傳到倉儲上</p>
 <p></p>
@@ -406,8 +426,6 @@ frameStops: {
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass">
 <h2>W13-1</h2>
 <p dir="auto">請建立一個 Wink 檔案, 將 1. 已經完成的 meArm 機械手臂第一軸, 加入<span> </span><a href="https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm" rel="nofollow">https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm</a><span> </span>slider, 可以在執行時, 利用滑鼠拖動旋轉 360 度 (30%).</p>
 <div class="winkVideoPlayOverlayClass"></div>
@@ -567,4 +585,4 @@ run()
 <script src="https://mde.tw/cp2021/cmsimde/static/gearUtils-09.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/SVGpathUtils-6v03-min.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/sylvester.js"></script>
-<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script></div></div></div>
+<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script></div></div>
