--- a/content/期末考.html
+++ b/content/期末考.html
@@ -139,15 +139,24 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Task.html'>Next</a> >> Task<br /><h1>歡迎來到我的網站!!</h1>
-<p>本學期的電腦輔助設計實習, 要求每一位學員根據本 HW template 的格式建立個人的作業倉儲與網頁.</p>
-<p>目前已經先學習到如何運用一些像是CMS他能更快捷的方式進入我的倉儲，不須在像以前還要打一長串，才能進到我的倉儲，還有ACP可以快速的上傳我的新進度，方便我繳交任何作業~~</p>
-<hr/>
-<p>學號40923226</p>
-<p>網站倉儲: <a href="https://github.com/40923226/cad2021_hw">https://github.com/40923226/cad2021_hw</a></p>
-<p>網站連結: <a href="https://40923226.github.io/cad2021_hw/">https://40923226.github.io/cad2021_hw/</a></p>
-<p>其他與作者或作業相關資料說明或介紹</p>
-<br /> <a href='Task.html'>Next</a> >> Task</div>
+    <div id="tipue_search_content">W11(H2) << <a href='W11(H2).html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)<br /><h1>期末考</h1>
+<p>零件檔:<a href="https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing">https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing</a></p>
+<p></p>
+<p>繪圖過程:<a href="https://www.youtube.com/watch?v=gJJvBSnFo54">https://www.youtube.com/watch?v=gJJvBSnFo54</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/gJJvBSnFo54" width="800"></iframe></p>
+<p></p>
+<p>組裝影片:<a href="https://www.youtube.com/watch?v=tq-kHz-yLA8">https://www.youtube.com/watch?v=tq-kHz-yLA8</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/tq-kHz-yLA8" width="800"></iframe></p>
+<p></p>
+<p></p>
+<p></p>
+<p>wink:</p>
+<p></p>
+<p>心得:</p>
+<p>  這學期碰觸到了一些新的繪圖程式，而我接觸到的有onshape還有inventor，簡單的繪圖就像上面影片所做，接下來的coppeliasim才是真正的重點，要思考各軸與各軸的運動關係，然後要怎麼讓他做動，直線運動、旋轉運動等等，然後放置我的零件進入後，開始組裝。要先</p>
+<p>還有重點就是在coppeliasim裡都是英文，在平常幾乎看不到的單字讓我非常頭痛，不過這也讓我花時間去翻譯去學習。</p>
+<p>  </p>
+<p></p><br />W11(H2) << <a href='W11(H2).html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)</div>
         
     <!-- footer -->
       <div class="container">
