--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -391,6 +391,18 @@ end</pre>
 <p></p>
 <p></p>
 <h1>期末考</h1>
+<p>心得:</p>
+<p>  這學期碰觸到了些新的繪圖程式，而我被分配到的是onshape還有inventor，簡單的繪圖就像下面影片所做，onshape的話可直接畫在同一個圖檔接下來直接在裡面組裝即可。inventor的話，需新創一個組合件，再把要用零件全部匯入即可組裝。</p>
+<p>  接下來思考各軸與各軸的運動關係，然後想辦法讓他做動，還有直線運動、旋轉運動等等，onshape我是用圓柱結合和平面結合所去組成，inventor則是用約束裡面的貼合和插入去組，過程非常困難，但是組起來可以說很有成就感。</p>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass">
+<p></p>
+<p>還有重點就是在coppeliasim裡都是英文，在平常幾乎看不到的單字讓我非常頭痛，不過這也讓我花時間去翻譯去學習。</p>
+</div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressThumbClass">
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+</div>
 <p>零件檔:<a href="https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing">https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing</a></p>
 <p></p>
 <p>繪圖過程:<a href="https://www.youtube.com/watch?v=gJJvBSnFo54">https://www.youtube.com/watch?v=gJJvBSnFo54</a></p>
@@ -399,14 +411,37 @@ end</pre>
 <p>組裝影片:<a href="https://www.youtube.com/watch?v=tq-kHz-yLA8">https://www.youtube.com/watch?v=tq-kHz-yLA8</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/tq-kHz-yLA8" width="800"></iframe></p>
 <p></p>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<p>---------------</p>
+<p>wink:  </p>
 <p></p>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
+<source src="./../downloads/123.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass">
 <p></p>
-<p>wink</p>
+</div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass">
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass">
 <p></p>
-<p>心得:</p>
-<p>  這學期碰觸到了一些新的繪圖程式，而我接觸到的有onshape還有inventor，簡單的繪圖就像上面影片所做，接下來的coppeliasim才是真正的重點，要思考各軸與各軸的運動關係，然後要怎麼讓他做動，直線運動、旋轉運動等等，還有重點就是在coppeliasim裡都是英文，在平常幾乎看不到的單字讓我非常頭痛，不過這也讓我花時間去翻譯去學習。</p>
-<p>  </p>
-<p></p><h1>Wink(W13)</h1>
+</div>
+</div>
+</div>
+<div class="winkVideoPlayOverlayClass">---------------</div>
+</div><h1>Wink(W13)</h1>
 <p>先用wink錄製影片，將兩套程式的零件組繪圖進度紀錄進去</p>
 <p>再來用老師所提供的原始碼，並更改一下內容，將影片改成自己想要的名稱，上傳到倉儲上</p>
 <p></p>
