--- a/content/期末考.html
+++ b/content/期末考.html
@@ -140,6 +140,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W11(H2) << <a href='W11(H2).html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)<br /><h1>期末考</h1>
+<p>心得:</p>
+<p>  這學期碰觸到了些新的繪圖程式，而我被分配到的是onshape還有inventor，簡單的繪圖就像下面影片所做，onshape的話可直接畫在同一個圖檔接下來直接在裡面組裝即可。inventor的話，需新創一個組合件，再把要用零件全部匯入即可組裝。</p>
+<p>  接下來思考各軸與各軸的運動關係，然後想辦法讓他做動，還有直線運動、旋轉運動等等，onshape我是用圓柱結合和平面結合所去組成，inventor則是用約束裡面的貼合和插入去組，過程非常困難，但是組起來可以說很有成就感。</p>
+<div class="winkVideoControlBarProgressEmptyMiddleClass">  還有重點就是在coppeliasim裡都是英文，在平常幾乎看不到的單字讓我非常頭痛，不過這也讓我花時間去翻譯去學習。過程中，需插入軸，並將它定位，定位完後合併零件，再更改程式就差不多。</div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressThumbClass">
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+</div>
 <p>零件檔:<a href="https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing">https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing</a></p>
 <p></p>
 <p>繪圖過程:<a href="https://www.youtube.com/watch?v=gJJvBSnFo54">https://www.youtube.com/watch?v=gJJvBSnFo54</a></p>
@@ -148,15 +156,37 @@ img.add_border {
 <p>組裝影片:<a href="https://www.youtube.com/watch?v=tq-kHz-yLA8">https://www.youtube.com/watch?v=tq-kHz-yLA8</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/tq-kHz-yLA8" width="800"></iframe></p>
 <p></p>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<p>---------------</p>
+<p>wink:  </p>
 <p></p>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="800" width="1200">
+<source src="./../downloads/123.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass">
 <p></p>
-<p>wink:</p>
+</div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass">
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass">
 <p></p>
-<p>心得:</p>
-<p>  這學期碰觸到了一些新的繪圖程式，而我接觸到的有onshape還有inventor，簡單的繪圖就像上面影片所做，接下來的coppeliasim才是真正的重點，要思考各軸與各軸的運動關係，然後要怎麼讓他做動，直線運動、旋轉運動等等，然後放置我的零件進入後，開始組裝。要先</p>
-<p>還有重點就是在coppeliasim裡都是英文，在平常幾乎看不到的單字讓我非常頭痛，不過這也讓我花時間去翻譯去學習。</p>
-<p>  </p>
-<p></p><br />W11(H2) << <a href='W11(H2).html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)</div>
+</div>
+</div>
+</div>
+<div class="winkVideoPlayOverlayClass">---------------</div>
+</div><br />W11(H2) << <a href='W11(H2).html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)</div>
         
     <!-- footer -->
       <div class="container">
