--- a/config/content.htm
+++ b/config/content.htm
@@ -394,7 +394,8 @@ end</pre>
 <p>心得:</p>
 <p>  這學期碰觸到了些新的繪圖程式，而我被分配到的是onshape還有inventor，簡單的繪圖就像下面影片所做，onshape的話可直接畫在同一個圖檔接下來直接在裡面組裝即可。inventor的話，需新創一個組合件，再把要用零件全部匯入即可組裝。</p>
 <p>  接下來思考各軸與各軸的運動關係，然後想辦法讓他做動，還有直線運動、旋轉運動等等，onshape我是用圓柱結合和平面結合所去組成，inventor則是用約束裡面的貼合和插入去組，過程非常困難，但是組起來可以說很有成就感。</p>
-<div class="winkVideoControlBarProgressEmptyMiddleClass">  還有重點就是在coppeliasim裡都是英文，在平常幾乎看不到的單字讓我非常頭痛，不過這也讓我花時間去翻譯去學習。過程中，需插入軸，並將它定位，定位完後合併零件，再更改程式就差不多。</div>
+<p>  還有重點就是在coppeliasim裡都是英文，是平常幾乎看不到的單字讓我非常頭痛，不過這也讓我花時間去翻譯去學習。過程中，需插入軸，並將它定位，定位完後合併零件，再更改程式就差不多了。</p>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"> </div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressThumbClass">
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
