四連桿coppeliasim wink 影片

--- a/content/W11(H2).html
+++ b/content/W11(H2).html
@@ -144,7 +144,7 @@ img.add_border {
 <p><a href="https://drive.google.com/drive/folders/1tTAwIHiRr_Y-cCoNJJCFGArpYdtIHxnq?usp=sharing">https://drive.google.com/drive/folders/1tTAwIHiRr_Y-cCoNJJCFGArpYdtIHxnq?usp=sharing</a></p>
 <p>3D零件檔案(onshape):</p>
 <p><a href="https://drive.google.com/drive/folders/1UMRjqft1-kyaHtjBy0bJvjCNng9j8U2l?usp=sharing">https://drive.google.com/drive/folders/1UMRjqft1-kyaHtjBy0bJvjCNng9j8U2l?usp=sharing</a></p>
-<p>3D零件檔案(inventor):</p>
+<p></p>
 <p>影片:</p>
 <p><a href="https://www.youtube.com/watch?v=WcgBfZCOkEQ">https://www.youtube.com/watch?v=WcgBfZCOkEQ</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/WcgBfZCOkEQ" width="800"></iframe></p>
@@ -152,7 +152,31 @@ img.add_border {
 <p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/_J8cbSAUAD8" width="800"></iframe></p>
 <p>(因為要看清楚有插銷，所以影片裡故意讓它突出一塊)</p>
 <p></p>
-<p></p><br />運動場景 << <a href='運動場景.html'>Previous</a> <a href='期末考.html'>Next</a> >> 期末考</div>
+<p><strong>coppeliasim wink</strong></p>
+<p></p>
+<p></p>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="800" width="1200">
+<source src="./../downloads/1234.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div><br />運動場景 << <a href='運動場景.html'>Previous</a> <a href='期末考.html'>Next</a> >> 期末考</div>
         
     <!-- footer -->
       <div class="container">
