期末延伸題wink

--- a/content/期末考.html
+++ b/content/期末考.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='onshape安裝配置.html'>onshape安裝配置</a><li><a href='Onshape 操作流程.html'>Onshape 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='W11(H2).html'>W11(H2)</a><li><a href='期末考.html'>期末考</a><li class='has-children'><a href='Wink(W13).html'>Wink(W13)</a><ul class='dropdown'><li><a href='W13-1.html'>W13-1</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
+                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='onshape安裝配置.html'>onshape安裝配置</a><li><a href='Onshape 操作流程.html'>Onshape 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='W11(查驗).html'>W11(查驗)</a><li class='has-children'><a href='期末考.html'>期末考</a><ul class='dropdown'><li><a href='期末考延伸題.html'>期末考延伸題</a></li></ul><li class='has-children'><a href='Wink(W13).html'>Wink(W13)</a><ul class='dropdown'><li><a href='W13-1.html'>W13-1</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W11(H2) << <a href='W11(H2).html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)<br /><h1>期末考</h1>
+    <div id="tipue_search_content">W11(查驗) << <a href='W11(查驗).html'>Previous</a> <a href='期末考延伸題.html'>Next</a> >> 期末考延伸題<br /><h1>期末考</h1>
 <p>心得:</p>
 <p>  這學期碰觸到了些新的繪圖程式，而我被分配到的是onshape還有inventor，簡單的繪圖就像下面影片所做，onshape的話可直接畫在同一個圖檔接下來直接在裡面組裝即可。inventor的話，需新創一個組合件，再把要用零件全部匯入即可組裝。</p>
 <p>  接下來思考各軸與各軸的運動關係，然後想辦法讓他做動，還有直線運動、旋轉運動等等，onshape我是用圓柱結合和平面結合所去組成，inventor則是用約束裡面的貼合和插入去組，過程非常困難，但是組起來可以說很有成就感。</p>
@@ -169,12 +169,9 @@ var winkVideoData = {
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass"></div>
-</div>
-<div class="winkVideoPlayOverlayClass"></div>
-</div><br />W11(H2) << <a href='W11(H2).html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)</div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<br />W11(查驗) << <a href='W11(查驗).html'>Previous</a> <a href='期末考延伸題.html'>Next</a> >> 期末考延伸題</div>
         
     <!-- footer -->
       <div class="container">
