--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -444,19 +444,17 @@ frameStops: {
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <div class="winkVideoControlBarProgressThumbClass"></div>
-</div>
-<div class="winkVideoPlayOverlayClass"></div>
-</div><h2>期末考延伸題</h2>
+<div class="winkVideoPlayOverlayClass"></div><h2>期末考延伸題</h2>
 <p>期末零件檔：<a href="https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing">https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing</a></p>
+<p>繪圖過程:</p>
+<p><a href="https://www.youtube.com/watch?v=gJJvBSnFo54">https://www.youtube.com/watch?v=gJJvBSnFo54</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/gJJvBSnFo54" width="800"></iframe></p>
 <p>組裝影片:</p>
 <p><a href="https://youtu.be/DXMQdJ_SAWE">https://youtu.be/DXMQdJ_SAWE</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/DXMQdJ_SAWE" width="800"></iframe></p>
-<p>繪圖過程:</p>
-<p><a href="https://www.youtube.com/watch?v=gJJvBSnFo54">https://www.youtube.com/watch?v=gJJvBSnFo54</a><iframe allowfullscreen="allowfullscreen" height="600" src="//www.youtube.com/embed/gJJvBSnFo54" width="800"></iframe></p>
 <p>---------------------------------------------------------------------------------------------------------------</p>
 <script>
 var winkVideoData = {
@@ -470,6 +468,24 @@ frameStops: {
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
 <source src="./../downloads/12345.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<h1>機械手臂</h1>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="1200" width="800">
+<source src="./../downloads/12.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -657,4 +673,4 @@ run()
 <script src="https://mde.tw/cp2021/cmsimde/static/gearUtils-09.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/SVGpathUtils-6v03-min.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/sylvester.js"></script>
-<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script></div></div>
+<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script></div></div></div></div></div></div>
