--- a/content/期末考延伸題.html
+++ b/content/期末考延伸題.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='onshape安裝配置.html'>onshape安裝配置</a><li><a href='Onshape 操作流程.html'>Onshape 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='W11(查驗).html'>W11(查驗)</a><li class='has-children'><a href='期末考.html'>期末考</a><ul class='dropdown'><li><a href='期末考延伸題.html'>期末考延伸題</a></li></ul><li class='has-children'><a href='Wink(W13).html'>Wink(W13)</a><ul class='dropdown'><li><a href='W13-1.html'>W13-1</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
+                     <li><a href='歡迎來到我的網站!!.html'>歡迎來到我的網站!!</a><li class='has-children'><a href='Task.html'>Task</a><ul class='dropdown'><li><a href='hwpages.html'>hwpages</a><li><a href='githubpage.html'>githubpage</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='INVENTOR 繪圖.html'>INVENTOR 繪圖</a><ul class='dropdown'><li><a href='Inventor 安裝配置.html'>Inventor 安裝配置</a><li><a href='Inventor 操作流程.html'>Inventor 操作流程</a></li></ul><li class='has-children'><a href='Onshape 繪圖.html'>Onshape 繪圖</a><ul class='dropdown'><li><a href='onshape安裝配置.html'>onshape安裝配置</a><li><a href='Onshape 操作流程.html'>Onshape 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='W11(查驗).html'>W11(查驗)</a><li class='has-children'><a href='期末考.html'>期末考</a><ul class='dropdown'><li><a href='期末考延伸題.html'>期末考延伸題</a></li></ul><li><a href='機械手臂.html'>機械手臂</a><li class='has-children'><a href='Wink(W13).html'>Wink(W13)</a><ul class='dropdown'><li><a href='W13-1.html'>W13-1</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li><a href='Run.html'>Run</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">期末考 << <a href='期末考.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)<br /><h1>期末考延伸題</h1>
+    <div id="tipue_search_content">期末考 << <a href='期末考.html'>Previous</a> <a href='機械手臂.html'>Next</a> >> 機械手臂<br /><h1>期末考延伸題</h1>
 <p>期末零件檔：<a href="https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing">https://drive.google.com/drive/folders/1JYKKdiOHVzTR8SJaAc1mNlDM9UagbAoz?usp=sharing</a></p>
 <p>繪圖過程:</p>
 <p><a href="https://www.youtube.com/watch?v=gJJvBSnFo54">https://www.youtube.com/watch?v=gJJvBSnFo54</a></p>
@@ -165,11 +165,7 @@ frameStops: {
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass"></div>
-</div>
-<div class="winkVideoPlayOverlayClass"></div>
-</div><br />期末考 << <a href='期末考.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)</div>
+<br />期末考 << <a href='期末考.html'>Previous</a> <a href='機械手臂.html'>Next</a> >> 機械手臂</div>
         
     <!-- footer -->
       <div class="container">
