--- a/content/機械手臂.html
+++ b/content/機械手臂.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2021 homework site</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,13 +139,30 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">onshape安裝配置 << <a href='onshape安裝配置.html'>Previous</a> <a href='運動場景.html'>Next</a> >> 運動場景<br /><h1>Onshape 操作流程</h1>
-<p>零組件繪圖教學影片 (照以上影片操作):個零件都先以CAD先描繪過一次，再轉成DXF檔，再以Onshape打開圖檔，並且長料，就完成了此零件。</p>
-<p>  如果遇到零件無法長料，就代表此圖並沒有封閉，可一個一個部分檢查，但會消耗較多時間，或者也可以直接在上面多描一次</p>
-<p>CAD2 零組件繪圖操作流程影片 (Youtube)</p>
-<p>CAD2 零組件繪圖教學影片 (Wink)</p>
-<p>CAD2 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p><br />onshape安裝配置 << <a href='onshape安裝配置.html'>Previous</a> <a href='運動場景.html'>Next</a> >> 運動場景</div>
+    <div id="tipue_search_content">期末考延伸題 << <a href='期末考延伸題.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)<br /><h1>機械手臂</h1>
+<p><strong>coppeliasim wink</strong></p>
+<script>
+var winkVideoData = {
+dataVersion: 1,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
+frameStops: {
+},
+};
+</script>
+<div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="1200" width="800">
+<source src="./../downloads/12.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div><br />期末考延伸題 << <a href='期末考延伸題.html'>Previous</a> <a href='Wink(W13).html'>Next</a> >> Wink(W13)</div>
         
     <!-- footer -->
       <div class="container">
